# rosaria2

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/rosaria2/: aria_utils.hpp  artime_to_ros_time.hpp  dynamic_parameter.hpp  laser_publisher.hpp  rosaria2_node.hpp  rosaria2node.hpp
launch/: rosaria2.launch.py
msg/: BumperState.msg
scripts/: prefix_ns_emergency_stop.sh
src/: emergency_stop.cpp  laser_publisher.cpp  rosaria2_node.cpp  rosaria2node.cpp  test.cpp
